@@ -742,4 +742,5 @@
     <string name="upgrade">Nâng cấp</string>
     <string name="points">Xu</string>
     <string name="downgrade">Hạ cấp</string>
+    <string name="message_sent">Tin nhắn được gửi</string>
 </resources>
