@@ -751,6 +751,7 @@
         content on Hi Town.
     </string>
     <string name="downgrade">Downgrade</string>
+    <string name="message_sent">Message sent</string>
     <plurals name="show_x_more_comments">
         <item quantity="one">Show %1$s more comment</item>
         <item quantity="other">Show %1$s more comments</item>
