@@ -2,6 +2,7 @@
 ======
 
  - Slide messages to quickly reply
+ - Reply to messages from notification
 
 0.9.93
 ======
